# incident-bot

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
config/: config.py
database/: __init__.py  models.py  requests.py
database/migrations/: env.py
database/migrations/versions/: 2025_02_05_1033-262894f5c2c9_first_migration.py  2025_02_05_1521-b52b3c48d502_first_migration.py  2025_02_05_1603-4d19ece98f52_first_migration.py  2025_02_06_0023-7420ca98fa24_first_migration.py
filters/: filters.py
fsm/: states.py
handlers/: admin.py  user.py
keyboards/: keyboards.py  set_menu.py
lexicon/: lexicon.py
locales/: ru.ftl
services/: services.py
services/tmp/: Массовые инциденты 01.02-13.02.2025.xlsx
utils/: i18n.py  utils.py
