[tool.poetry]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.19.0"
aiogram-dialog = "^2.3.1"
fluentogram = "^1.1.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
redis = "^5.2.1"
openpyxl = "^3.1.5"
python-dateutil = "^2.9.0.post0"
alembic = "^1.15.2"
environs = "^14.1.1"
asyncpg = "^0.30.0"
